package Transporte;

public class Transporte {
    protected String medio;

    public Transporte(String medio) {
        this.medio = medio;

    }
    // Setters
    public void setMedio(String medio) {
        this.medio = medio;
    }


    // Getters
    public String getMedio() {
        return this.medio;
    }

}


