@startuml
class Transporte.Aereo.Aerostatos {
- String tipoCarga
- String tipoPropulsion
- String alcance
- String autonomia
- String velocidad
+ <<Create>> Aerostatos(String,String,String,String,String,String,String)
+ void SetCarga(String)
+ void SetPropulsion(String)
+ void SetAlcance(String)
+ void SetAuto(String)
+ void SetVelocidad(String)
+ String getTipoCarga()
+ String getPropulsion()
+ String getAlcance()
+ String getAuto()
+ String getVelocidad()
+ String toString()
}
class Transporte.Aereo.NoPresurizados {
- String tipoCarga
- String tipoPropulsion
- String alcance
- String autonomia
- String velocidad
+ <<Create>> NoPresurizados(String,String,String,String,String,String,String)
+ void SetCarga(String)
+ void SetPropulsion(String)
+ void SetAlcance(String)
+ void SetAuto(String)
+ void SetVelocidad(String)
+ String getTipoCarga()
+ String getPropulsion()
+ String getAlcance()
+ String getAuto()
+ String getVelocidad()
+ String toString()
}
class Transporte.Aereo.Aereo {
- String conduccion
+ <<Create>> Aereo(String,String)
+ void setConduccion(String)
+ String getConducciono()
}
class Transporte.Terrestre.Ferroviario {
- String tipoCarga
- String NumEjes
- String alcance
- String autonomia
- String velocidad
+ <<Create>> Ferroviario(String,String,String,String,String,String,String)
+ void SetCarga(String)
+ void SetNumEjesing()
+ void SetAlcance(String)
+ void SetAuto(String)
+ void SetVelocidad(String)
+ String getTipoCarga()
+ String getNumEjes()
+ String getAlcance()
+ String getAuto()
+ String getVelocidad()
+ String toString()
}
class Transporte.Terrestre.Electricos {
- String tipoCarga
- String NumEjes
- String alcance
- String autonomia
- String velocidad
+ <<Create>> Electricos(String,String,String,String,String,String,String)
+ void SetCarga(String)
+ void SetNumEjesing()
+ void SetAlcance(String)
+ void SetAuto(String)
+ void SetVelocidad(String)
+ String getTipoCarga()
+ String getNumEjes()
+ String getAlcance()
+ String getAuto()
+ String getVelocidad()
+ String toString()
}
class Transporte.Terrestre.NoMotorizados {
- String tipoCarga
- String NumEjes
- String alcance
- String autonomia
- String velocidad
+ <<Create>> NoMotorizados(String,String,String,String,String,String,String)
+ void SetCarga(String)
+ void SetNumEjesing()
+ void SetAlcance(String)
+ void SetAuto(String)
+ void SetVelocidad(String)
+ String getTipoCarga()
+ String getNumEjes()
+ String getAlcance()
+ String getAuto()
+ String getVelocidad()
+ String toString()
}
class Transporte.Maritimo.Embarcaciones {
- String tipoCarga
- String alcance
- String impulso
- String autonomia
- String velocidad
+ <<Create>> Embarcaciones(String,String,String,String,String,String,String)
+ void SetCarga(String)
+ void SetAlcance(String)
+ void SetImpulso(String)
+ void SetAuto(String)
+ void SetVelocidad(String)
+ String getTipoCarga()
+ String getAlcance()
+ String getImpulso()
+ String getAuto()
+ String getVelocidad()
+ String toString()
}
class Transporte.Transporte {
# String medio
+ <<Create>> Transporte(String)
+ void setMedio(String)
+ String getMedio()
}
class Transporte.Maritimo.Submarinos {
- String tipoCarga
- String alcance
- String impulso
- String autonomia
- String velocidad
+ <<Create>> Submarinos(String,String,String,String,String,String,String)
+ void SetCarga(String)
+ void SetAlcance(String)
+ void SetImpulso(String)
+ void SetAuto(String)
+ void SetVelocidad(String)
+ String getTipoCarga()
+ String getAlcance()
+ String getImpulso()
+ String getAuto()
+ String getVelocidad()
+ String toString()
}
class Transporte.Terrestre.Motorizados {
- String tipoCarga
- String NumEjes
- String alcance
- String autonomia
- String velocidad
+ <<Create>> Motorizados(String,String,String,String,String,String,String)
+ void SetCarga(String)
+ void SetNumEjesing()
+ void SetAlcance(String)
+ void SetAuto(String)
+ void SetVelocidad(String)
+ String getTipoCarga()
+ String getNumEjes()
+ String getAlcance()
+ String getAuto()
+ String getVelocidad()
+ String toString()
}
class Transporte.Aereo.Presurizados {
- String tipoCarga
- String tipoPropulsion
- String alcance
- String autonomia
- String velocidad
+ <<Create>> Presurizados(String,String,String,String,String,String,String)
+ void SetCarga(String)
+ void SetPropulsion(String)
+ void SetAlcance(String)
+ void SetAuto(String)
+ void SetVelocidad(String)
+ String getTipoCarga()
+ String getPropulsion()
+ String getAlcance()
+ String getAuto()
+ String getVelocidad()
+ String toString()
}
class Transporte.Maritimo.Maritimo {
- String longitudCasco
+ <<Create>> Maritimo(String,String)
+ void setLongitudCasco(String)
+ String getLongitudCasco()
}
class Transporte.Maritimo.Barcos {
- String tipoCarga
- String alcance
- String impulso
- String autonomia
- String velocidad
+ <<Create>> Barcos(String,String,String,String,String,String,String)
+ void SetCarga(String)
+ void SetAlcance(String)
+ void SetImpulso(String)
+ void SetAuto(String)
+ void SetVelocidad(String)
+ String getTipoCarga()
+ String getAlcance()
+ String getImpulso()
+ String getAuto()
+ String getVelocidad()
+ String toString()
}
class Transporte.Aereo.NoTripulados {
- String tipoCarga
- String tipoPropulsion
- String alcance
- String autonomia
- String velocidad
+ <<Create>> NoTripulados(String,String,String,String,String,String,String)
+ void SetCarga(String)
+ void SetPropulsion(String)
+ void SetAlcance(String)
+ void SetAuto(String)
+ void SetVelocidad(String)
+ String getTipoCarga()
+ String getPropulsion()
+ String getAlcance()
+ String getAuto()
+ String getVelocidad()
+ String toString()
}
class Transporte.Terrestre.Terrestre {
- String regulado
+ <<Create>> Terrestre(String,String)
+ void setRegulado(String)
+ String getRegulado()
}
class Transporte.Maritimo.Buques {
- String tipoCarga
- String alcance
- String impulso
- String autonomia
- String velocidad
+ <<Create>> Buques(String,String,String,String,String,String,String)
+ void SetCarga(String)
+ void SetAlcance(String)
+ void SetImpulso(String)
+ void SetAuto(String)
+ void SetVelocidad(String)
+ String getTipoCarga()
+ String getAlcance()
+ String getImpulso()
+ String getAuto()
+ String getVelocidad()
+ String toString()
}


Transporte.Aereo.Aereo <|-- Transporte.Aereo.Aerostatos
Transporte.Aereo.Aereo <|-- Transporte.Aereo.NoPresurizados
Transporte.Transporte <|-- Transporte.Aereo.Aereo
Transporte.Terrestre.Terrestre <|-- Transporte.Terrestre.Ferroviario
Transporte.Terrestre.Terrestre <|-- Transporte.Terrestre.Electricos
Transporte.Terrestre.Terrestre <|-- Transporte.Terrestre.NoMotorizados
Transporte.Maritimo.Maritimo <|-- Transporte.Maritimo.Embarcaciones
Transporte.Maritimo.Maritimo <|-- Transporte.Maritimo.Submarinos
Transporte.Terrestre.Terrestre <|-- Transporte.Terrestre.Motorizados
Transporte.Aereo.Aereo <|-- Transporte.Aereo.Presurizados
Transporte.Transporte <|-- Transporte.Maritimo.Maritimo
Transporte.Maritimo.Maritimo <|-- Transporte.Maritimo.Barcos
Transporte.Aereo.Aereo <|-- Transporte.Aereo.NoTripulados
Transporte.Transporte <|-- Transporte.Terrestre.Terrestre
Transporte.Maritimo.Maritimo <|-- Transporte.Maritimo.Buques
@enduml